# bevy-boids

./: Cargo.toml
src/: birds.rs  camera.rs  env.rs  main.rs  utils.rs  velocity.rs  vision_radius.rs
src/birds/: alignment.rs  birds_number.rs  cohesion.rs  cube_bound.rs  gizmos.rs  kd_tree.rs  look_to.rs  random_vel.rs  separation.rs  shape.rs  shi_bird_shadows.rs  teams.rs
src/camera/: pan.rs
src/utils/: acap.rs
