[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
acap = "0.3.0"
bevy = "0.16"
bevy_panorbit_camera = "0.26"
rand = "0.9.0"
